# dino

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  TRAINING_PLAN.md  debug_game_over.py  flake.nix  log.txt  main.py  makefile  pipewire_capture.py  pyproject.toml  scene.json  scene_small.json  test_game_over.py  test_pipewire.py  test_region_selection.py
docs/: 1312.5602v1.txt  1509.06461v3.txt  1706.10295v3.txt  2502.10303v1.txt  deep-research-report-noisy-net-double-dqn.md
src/: dqn.py  game_over.py  main.py  pipewire_capture.py  screenshare.py  test_game_over.py  test_pipewire.py  test_region_selection.py  train_local.py  train_simple_remote_ray.py
src/actors/: local_inference_model.py
src/agents/: base.py  dqn_agent.py  local_trainer.py  simple_ray_trainer.py
src/buffers/: __init__.py  thread_safe_buffer.py
src/capture/: frame_processor.py  gstreamer.py
src/core/: config.py  constants.py  episode_context.py  game_config.py  gstreamer_config.py  types.py
src/env/: dino_gymnasium.py  episode_manager.py  game_interface.py  pending_buffer.py  playwright_interface.py  state_monitor.py  xlib_interface.py
src/models/: __init__.py  dqn.py  noisy_linear.py
src/replay/: buffer.py
src/training/: __init__.py  local_training_thread.py  training_thread.py
src/utils/: metrics.py  tensorboard_logger.py  visualization.py
src_old/: main.py  main_old.py  pipewire_capture.py  screenshare.py  screenshare_2.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py  test_pipewire.py  test_region_selection.py
src_old_3/: dqn.py  main.py
