[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dino"
version = "0.1.0"
description = "Chrome Dino Game RL Agent"
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "mss>=9.0.0",
    "opencv-python>=4.8.0",
    "stable-baselines3>=2.0.0",
    "pynput>=1.7.0",
    "PyGObject>=3.42.0",
    "pillow>=10.0.0",
    "dbus-python>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.setuptools]
py-modules = ["main", "pipewire_capture"]
